fix: scale background in menus, so it is not cropped

--- a/code/UI/FakeLoadingScreen.razor.scss
+++ b/code/UI/FakeLoadingScreen.razor.scss
@@ -4,7 +4,7 @@ FakeLoadingScreen {
     height: 100vh;
     z-index: 99999;
     background-position: center;
-    background-size: auto 100%;
+    background-size: 150%;
     font-family: Poppins;
 
     .title-holder {
