--- a/code/UI/Menus/MainMenus/GameCreationMenu.razor.scss
+++ b/code/UI/Menus/MainMenus/GameCreationMenu.razor.scss
@@ -5,7 +5,7 @@ GameCreationMenu {
     pointer-events: all;
     justify-content: center;
     background-position: center;
-    background-size: auto 100%;
+    background-size: 150%;
     align-items: center;
     font-family: Poppins;
 
