--- a/code/UI/Menus/MainMenus/MainMenu.razor.scss
+++ b/code/UI/Menus/MainMenus/MainMenu.razor.scss
@@ -5,7 +5,7 @@ MainMenu {
     align-items: center;
     justify-content: center;
     background-position: center;
-    background-size: auto 100%;
+    background-size: 150%;
     pointer-events: all;
     font-family: Poppins;
 
